--- a/Register.html
+++ b/Register.html
@@ -7,7 +7,7 @@
     
 </head>
 <body id="register" >
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 
 
 <div class="A">
