--- a/mid/home.html
+++ b/mid/home.html
@@ -20,6 +20,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="Registration.html">Register</a></li>
                 <li><a href="Support.html">Support</a></li>
+                <li><a href="photo.html">Photo Gallery</a></li>
                 <li>
                     <form action="/search-results.html" method="get" onsubmit="searchSite(); return false;">
                         <div class="search">
