--- a/mid/Register.html
+++ b/mid/Register.html
@@ -24,11 +24,11 @@
 
         <div class="step hidden" id="step2">
             <h2>Step 2: Address</h2> <br>
-            <label for="email">Address:</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" class="aa" placeholder="Email"><br><br>
-            <label for="Phone">City:</label>
+            <label for="Phone">Phone:</label>
             <input type="number" id="Phone" class="aa" placeholder="phone number"><br><br>
-            <label for="password">City:</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" class="aa" placeholder="password"><br><br>
             <button type="button" onclick="nextStep(2)">Next</button>
             <button type="button" onclick="prevStep(2)">Back</button>
