--- a/mid/home.html
+++ b/mid/home.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="Registration.html">Register</a></li>
+                <li><a href="Register.html">Register</a></li>
                 <li><a href="Support.html">Support</a></li>
                 <li><a href="photo.html">Photo Gallery</a></li>
                 <li>
