--- a/mid/home.html
+++ b/mid/home.html
@@ -57,7 +57,7 @@
             { title: "About Cricket Feeds", url: "about.html" },
             { title: "Cricket Match Highlights", url: "highlights.html" },
             { title: "Cricket Player Statistics", url: "statistics.html" },
-            { title: "Register for Cricket Updates", url: "Registration.html" },
+            { title: "Register for Cricket Updates", url: "Register.html" },
             { title: "Contact Support", url: "Support.html" }
         ];
 
